# distributed-matmul

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
benchmark/: run_serial_blocked.sh  run_serial_openblas.sh  run_summa_oblas_rankone.sh
benchmark/pbs/: run_serial_naive.sh  run_serial_openblas.sh  run_summa_rankone.sh
benchmark/slurm/: loop_summa_rankone.sh  run_serial_blocked.sh  run_serial_naive.sh  run_serial_openblas.sh  run_summa_optimal.sh
include/: matmul_interface.h  matrix.h
logs/: blocked_run_0.out  blocked_run_1.out  blocked_run_10.out  blocked_run_11.out  blocked_run_12.out  blocked_run_2.out  blocked_run_3.out  blocked_run_4.out  blocked_run_5.out  blocked_run_6.out  blocked_run_7.out  blocked_run_8.out  blocked_run_9.out  naive_run_0.out  naive_run_1.out  naive_run_10.out  naive_run_2.out  naive_run_3.out  naive_run_4.out  naive_run_5.out  naive_run_6.out  naive_run_7.out  naive_run_8.out  naive_run_9.out  openblas_run_0.out  openblas_run_1.out  openblas_run_10.out  openblas_run_11.out  openblas_run_2.out  openblas_run_3.out  openblas_run_4.out  openblas_run_5.out  openblas_run_6.out  openblas_run_7.out  openblas_run_8.out  openblas_run_9.out
notebooks/: analysis.ipynb
results/blas/: n1024_b1.csv  n128_b1.csv  n16_b1.csv  n2048_b1.csv  n256_b1.csv  n32_b1.csv  n4096_b1.csv  n4_b1.csv  n512_b1.csv  n64_b1.csv  n8_b1.csv
results/blocked/: n1024_b1.csv  n1024_b1024.csv  n1024_b128.csv  n1024_b16.csv  n1024_b2.csv  n1024_b256.csv  n1024_b32.csv  n1024_b4.csv  n1024_b512.csv  n1024_b64.csv  n1024_b8.csv  n128_b1.csv  n128_b128.csv  n128_b16.csv  n128_b2.csv  n128_b32.csv  n128_b4.csv  n128_b64.csv  n128_b8.csv  n16_b1.csv  n16_b16.csv  n16_b2.csv  n16_b4.csv  n16_b8.csv  n2048_b1.csv  n2048_b1024.csv  n2048_b128.csv  n2048_b16.csv  n2048_b2.csv  n2048_b2048.csv  n2048_b256.csv  n2048_b32.csv  n2048_b4.csv  n2048_b512.csv  n2048_b64.csv  n2048_b8.csv  n256_b1.csv  n256_b128.csv  n256_b16.csv  n256_b2.csv  (+47 more)
results/naive/: n1024.csv  n128.csv  n16.csv  n2048.csv  n256.csv  n32.csv  n4.csv  n4096.csv  n512.csv  n64.csv  n8.csv
results/summa/: np16_n1024_b1.csv  np16_n1024_b1024.csv  np16_n1024_b128.csv  np16_n1024_b16.csv  np16_n1024_b2.csv  np16_n1024_b256.csv  np16_n1024_b32.csv  np16_n1024_b4.csv  np16_n1024_b512.csv  np16_n1024_b64.csv  np16_n1024_b8.csv  np16_n128_b1.csv  np16_n128_b128.csv  np16_n128_b16.csv  (+426 more)
src/: distributed_matmul.c  experiment.c  main.c  matrix.c  serial_matmul.c
tests/: test_serial.c
(+715 files in other folders)
